@@ -112,7 +112,7 @@ self.setTimeout('rcmail_auto_save()',300000);
 
 <div id="compose-attachments">
 <div><roundcube:label name="attachments" /></div>
-<roundcube:object name="composeAttachmentList" />
+<roundcube:object name="composeAttachmentList" deleteIcon="/images/icons/remove-attachment.png"/ >
 <p><roundcube:button command="add-attachment" imagePas="/images/buttons/add_pas.png" imageSel="/images/buttons/add_sel.png" imageAct="/images/buttons/add_act.png" width="23" height="18" title="addattachment" />
 </div>
 
